--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,9 +5,14 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+         <link rel="stylesheet" type="text/css" href="{{asset('vendor/bootstrap.min.css')}}"/>
+        <link rel="stylesheet" type="text/css" href="{{asset('css/news_css/main.css')}}"/>
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+        <script type="text/javascript" src="{{asset('vendor/jquery.min.js')}}"></script>
+        {% endblock %}
+        {% block scriptForm %}{% endblock %}
     </body>
 </html>
