--- a/app/Resources/views/admin/burger/edit.html.twig
+++ b/app/Resources/views/admin/burger/edit.html.twig
@@ -1,12 +1,26 @@
 {% extends ':admin:templateAdmin.html.twig' %}
 
   {% block content %}
+       
     <h1>Burger edit</h1>
+     {% for message in app.flashes('maj') %}
+         <div id="maj_post">
+      <div class="alert alert-success alert-dismissible fade in" role="alert">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
+                  </button>
+                  <div class="ui-pnotify-icon">
+                 <span class="glyphicon glyphicon-ok-sign"></span>
+             </div>
+             <h4 class="ui-pnotify-title">Success</h4>
+             <div class="ui-pnotify-text"> {{ message }}</div>   
+                </div>
+         </div>   
+{% endfor %}
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-        
+        <input type="submit" value="Edit">
+         
     {{ form_end(edit_form) }}
 
     <ul>
@@ -19,4 +33,9 @@
             {{ form_end(delete_form) }}
         </li>
     </ul>
+
+{% endblock %}
+{% block scriptForm %}
+    <script type="text/javascript" src="{{asset('js/form.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/listes_burger.js')}}"></script>
 {% endblock %}
