--- a/web/css/news_css/scss/_adminDashboard.scss
+++ b/web/css/news_css/scss/_adminDashboard.scss
@@ -8,8 +8,21 @@ and open the template in the editor.
     Author     : hugues
 */
 
-.icon-burger {
-    width: 25px;
-    margin-top: -8px;
-    margin-left: -5px;
+/*--------- titre name product ---------*/
+.title_add {
+    margin-left: 10px;
+}
+
+/*----------------- overide avatar product ------------*/ 
+ul.messages li img.avatar, img.avatar {
+  height: 32px;
+  width: 32px;
+  float: left;
+  display: inline-block;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  padding: 0;
+  background: none;
+  border: none;
 }
