create entity BurgerSpecial/Accompagnement create CRUD BurgerSpecial implementation datepicker form burgerSpecial

--- a/app/Resources/views/admin/burger/edit.html.twig
+++ b/app/Resources/views/admin/burger/edit.html.twig
@@ -36,6 +36,7 @@
 
 {% endblock %}
 {% block scriptForm %}
-    <script type="text/javascript" src="{{asset('js/form.js')}}"></script>
-    <script type="text/javascript" src="{{asset('js/listes_burger.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/burger.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/form/form_datepicker.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/form/form_ingredient_burger.js')}}"></script>
 {% endblock %}
