--- a/app/Resources/views/admin/burger/new.html.twig
+++ b/app/Resources/views/admin/burger/new.html.twig
@@ -37,5 +37,8 @@
 {% endblock %}
 
 {% block scriptForm %}
-    <script type="text/javascript" src="{{asset('js/form.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/burger.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/form/form_datepicker.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/form/form_ingredient_burger.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/form/form_preload_img.js')}}"></script>
 {% endblock %}
