--- a/app/Resources/views/admin/burger/show.html.twig
+++ b/app/Resources/views/admin/burger/show.html.twig
@@ -76,5 +76,5 @@
     </ul>
 {% endblock %}
 {% block scriptForm %}
-    <script type="text/javascript" src="{{asset('js/listes_burger.js')}}"></script>
+     <script type="text/javascript" src="{{asset('js/backend/burger.js')}}"></script>
 {% endblock %}
