--- a/app/Resources/views/admin/templateAdmin.html.twig
+++ b/app/Resources/views/admin/templateAdmin.html.twig
@@ -30,12 +30,11 @@
             <div class="menu_section">
              
               <ul class="nav side-menu">
-                <li><a href="{{path('admin_index')}}"><i class="fa fa-home"></i> Home</a>
-                </li>
-                <li><a href="{{path('categorie_index')}}"><i class="fa fa-edit"></i> Catégories</a>
-                    </li>
-                <li><a href="{{path('burger_index')}}"><i class="fa fa-edit"></i> Burger</a>
-                    </li>
+                <li><a href="{{path('admin_index')}}"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="{{path('categorie_index')}}"><i class="fa fa-edit"></i> Catégories</a></li>
+                <li><a href="{{path('accompagnement_index')}}"><i class="fa fa-edit"></i> Accompagnements</a></li>
+                <li><a href="{{path('burger_index')}}"><i class="fa fa-edit"></i> Burgers</a></li>
+               <li><a href="{{path('burgerspecial_index')}}"><i class="fa fa-edit"></i> Burgers Special</a></li>    
               </ul>
             </div>
            
