--- a/app/Resources/views/admin/burger/index.html.twig
+++ b/app/Resources/views/admin/burger/index.html.twig
@@ -142,6 +142,6 @@
 {% endblock %}
 
 {% block scriptForm %}
-    <script type="text/javascript" src="{{asset('js/listes_burger.js')}}"></script>
+     <script type="text/javascript" src="{{asset('js/backend/burger.js')}}"></script>
 
 {% endblock %}
