--- a/web/css/news_css/main.css
+++ b/web/css/news_css/main.css
@@ -54,6 +54,9 @@ input[type="checkbox"]:checked {
     position: absolute;
   }
 }*/
+.form-control-feedback {
+  margin-top: 30px; }
+
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
