--- a/web/css/news_css/scss/_adminDashboard.scss
+++ b/web/css/news_css/scss/_adminDashboard.scss
@@ -26,3 +26,7 @@ ul.messages li img.avatar, img.avatar {
   background: none;
   border: none;
 }
+
+left_col scroll-view {
+    cursor: pointer !important;
+}
