--- a/app/Resources/views/admin/burger/edit.html.twig
+++ b/app/Resources/views/admin/burger/edit.html.twig
@@ -18,7 +18,12 @@
 {% endfor %}
 
     {{ form_start(edit_form) }}
+    
         {{ form_widget(edit_form) }}
+        <div class="col-md-12" id="imgInp">
+                    <img src="{{asset('uploads/img/')~burger.thumbnail}}" class="col-md-4 img-responsive"/>
+                    <img class="col-md-4 img-responsive" id="blah" src="#" alt="your image" />
+    </div>
         <input type="submit" value="Edit">
          
     {{ form_end(edit_form) }}
@@ -39,4 +44,5 @@
     <script type="text/javascript" src="{{asset('js/backend/burger.js')}}"></script>
     <script type="text/javascript" src="{{asset('js/backend/form/form_datepicker.js')}}"></script>
     <script type="text/javascript" src="{{asset('js/backend/form/form_ingredient_burger.js')}}"></script>
+    <script type="text/javascript" src="{{asset('js/backend/form/form_preload_img.js')}}"></script>
 {% endblock %}
