--- a/app/Resources/views/admin/burgerspecial/new.html.twig
+++ b/app/Resources/views/admin/burgerspecial/new.html.twig
@@ -9,16 +9,19 @@
          <div class="col-sm-6"><label>Début de l'offre</label>{{form_widget(form.dateDebut)}}<span class="fa fa-calendar-o form-control-feedback left"></span></div>
         <div class="col-sm-6"><label>Fin de l'offre</label>{{form_widget(form.datefin)}}<span class="fa fa-calendar-o form-control-feedback left"></span></div>
         </div>
-        
+       {# <div class="">
+                    {{ form_row(form.ingredient)}}
+                    <p>*séparer vos ingrédients par une virgule</p>    
+         </div>#}
         {{ form_widget(form) }}
        
          
         
         <input type="submit" value="Create" />
-         <div class="col-sm-10">
-                    {{ form_row(form.ingredient) }}
+         
+                   {# <div class="col-sm-10">
             <a href="#" id="add_category2" class="btn bg-purple btn-flat">Ajouter un ingrédient</a>
-                  </div>
+                  </div>#}
             
             
     {{ form_end(form) }}
