--- a/app/Resources/views/baseAdmin.html.twig
+++ b/app/Resources/views/baseAdmin.html.twig
@@ -84,6 +84,7 @@
         <script type="text/javascript" src="{{asset('js/backend/gentelella/datatables/responsive.bootstrap.min.js')}}"></script>    
         <script type="text/javascript" src="{{asset('js/backend/gentelella/datatables/dataTables.scroller.min.js')}}"></script>
         
+        <script type="text/javascript" src="{{asset('js/backend/gentelella/tags/jquery.tagsinput.min.js')}}"></script>
         
         <script type="text/javascript" src="{{asset('js/backend/gentelella/custom.js')}}"></script>
         
