--- a/web/css/gentelella/custom.css
+++ b/web/css/gentelella/custom.css
@@ -626,6 +626,7 @@ li.current-page a {
 .toggle a {
   padding: 15px 15px 0;
   margin: 0;
+  cursor: pointer;
 }
 .toggle a i {
   font-size: 26px;
@@ -2821,7 +2822,7 @@ span.tag a {
   font-size: 11px;
 }
 .tagsinput input {
-  width: 80px;
+  width: 130px !important;
   margin: 0px;
   font-family: helvetica;
   font-size: 13px;
