--- a/web/css/news_css/main.css
+++ b/web/css/news_css/main.css
@@ -83,4 +83,7 @@ ul.messages li img.avatar, img.avatar {
   background: none;
   border: none; }
 
+left_col scroll-view {
+  cursor: pointer !important; }
+
 /*# sourceMappingURL=main.css.map */
