--- a/app/Resources/views/admin/templateAdmin.html.twig
+++ b/app/Resources/views/admin/templateAdmin.html.twig
@@ -43,6 +43,8 @@
                     <li><a href="{{path('accompagnement_index')}}"><i class="fa fa-edit"></i>Mes Accompagnements</a></li>
                     <li><a href="{{path('burgerspecial_index')}}"><i class="fa fa-edit"></i> Mes Burgers du moment </a></li>
                     <li><a href="{{path('boisson_index')}}"><i class="fa fa-edit"></i> Mes Boissons </a></li>
+                    <li><a href="{{path('dessert_index')}}"><i class="fa fa-edit"></i> Mes Desserts </a></li>
+                    <li><a href="{{path('menu_index')}}"><i class="fa fa-edit"></i> Mes Menus </a></li>
                   </ul>
                 </li>
               </ul>
