--- a/web/css/news_css/scss/_form.scss
+++ b/web/css/news_css/scss/_form.scss
@@ -74,6 +74,10 @@ input[type="checkbox"]:checked {
     margin-top: 30px;
 }
 
-.ingredient-info{
+
+/*------------choix liste dans menu------------*/
+
+.burger_choice{
+    font-weight: 900;
     
 }
