--- a/web/css/news_css/main.css
+++ b/web/css/news_css/main.css
@@ -57,6 +57,10 @@ input[type="checkbox"]:checked {
 .form-control-feedback {
   margin-top: 30px; }
 
+/*------------choix liste dans menu------------*/
+.burger_choice {
+  font-weight: 900; }
+
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
