--- a/app/Resources/views/admin/accompagnement/new.html.twig
+++ b/app/Resources/views/admin/accompagnement/new.html.twig
@@ -4,7 +4,17 @@
     <h1>Accompagnement creation</h1>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
+    
+    
+ 
+   
+
+    
+       {{ form_widget(form) }}
+        
+        
+        
+        
         <input type="submit" value="Create" />
     {{ form_end(form) }}
 
@@ -15,6 +25,6 @@
     </ul>
 {% endblock %}
 
-{% block scriptForm %}
+{#{% block scriptForm %}
     <script type="text/javascript" src="{{asset('js/form.js')}}"></script>
-{% endblock %}
+{% endblock %}#}
