--- a/app/Resources/views/admin/burger/index.html.twig
+++ b/app/Resources/views/admin/burger/index.html.twig
@@ -112,7 +112,7 @@
                             <li>
                               {% if burger.categorie == 'burger steak' %}<img src="{{asset('image/food/steak.png')}}" class="avatar" alt="Avatar">
                               {% elseif burger.categorie == 'burger chicken'%}<img src="{{asset('image/food/chicken-1.png')}}" class="avatar" alt="Avatar">
-                              {% elseif burger.categorie == 'burger vegetable'%}<img src="{{asset('image/food/lettuce.png')}}" class="avatar" alt="Avatar">
+                              {% elseif burger.categorie == 'burger vegetable'%}<img src="{{asset('image/food/aubergine.png')}}" class="avatar" alt="Avatar">
                               {% elseif burger.categorie == 'burger fish'%}<img src="{{asset('image/food/fish.png')}}" class="avatar" alt="Avatar">
                               {% elseif burger.categorie == null %}<img src="{{asset('image/food/question.png')}}" class="avatar" alt="Avatar">    
                               {% endif %}
