--- a/app/Resources/views/admin/menu/index.html.twig
+++ b/app/Resources/views/admin/menu/index.html.twig
@@ -19,7 +19,7 @@
             <tr>
                 <td><a href="{{ path('menu_show', { 'id': menu.id }) }}">{{ menu.id }}</a></td>
                 <td>{{ menu.name }}</td>
-                <td>{{ menu.choix }}</td>
+                <td><span class="burger_choice">burger au choix + </span>{{ menu.choix }}</td>
                 <td>{{ menu.prix }}</td>
                 <td>
                     <ul>
