--- a/app/Resources/views/admin/templateAdmin.html.twig
+++ b/app/Resources/views/admin/templateAdmin.html.twig
@@ -47,6 +47,7 @@
                     <li><a href="{{path('menu_index')}}"><i class="fa fa-edit"></i> Mes Menus </a></li>
                   </ul>
                 </li>
+                 <li><a href="{{path('icon_index')}}"><i class="fa fa-home"></i> Mes icons</a></li>
               </ul>
             </div>
            
