--- a/web/css/news_css/scss/_adminDashboard.scss
+++ b/web/css/news_css/scss/_adminDashboard.scss
@@ -30,3 +30,15 @@ ul.messages li img.avatar, img.avatar {
 left_col scroll-view {
     cursor: pointer !important;
 }
+
+///////////////////////////
+/////////////////////////
+
+/*----------------- icon-food ------------*/ 
+
+.icon_food {
+   height: 45px;
+   width: 45px;
+   display: inline-block;
+   margin: 10px;
+}
