--- a/web/css/news_css/main.css
+++ b/web/css/news_css/main.css
@@ -90,4 +90,11 @@ ul.messages li img.avatar, img.avatar {
 left_col scroll-view {
   cursor: pointer !important; }
 
+/*----------------- icon-food ------------*/
+.icon_food {
+  height: 45px;
+  width: 45px;
+  display: inline-block;
+  margin: 10px; }
+
 /*# sourceMappingURL=main.css.map */
